package Creatures;

public class Goblin extends Creature {
    public Goblin() {
        super("Goblin");
    }

}