package WorldMap;

public class CalabashWorld extends World {
    private static final int SIZE = 12;

    public CalabashWorld() {
        super(new Grid[SIZE][SIZE]);
    }
}
